--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         <section id="downloads">
           <a href="https://github.com/EquipLordBritish" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
+        <section id="Code-Pen">
+          <a href="http://codepen.io/Equip/FULL/PNZOLL" class= "btn"><span class="icon"></span>Code Pen</a>
+        </section>
       </div>
     </header>
 
